# homeowner-maintanence-bot

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
src/: app.py  connect.py  database.py  database_init.py  planetscale_keepalive.py  tasks.py
src/db_init/: homeowner-maintenance-bot.sql
src/db_migrations/: 0001_init_schema.down.sql  0001_init_schema.up.sql  0002_add_data.up.sql  0003_add_keepalive_table.down.sql  0003_add_keepalive_table.up.sql  README.md  database_init.py
src/templates/: home.html  keepalive.html  taskitem.html
